fix(suite): update to suitecrm version 8.8.0

--- a/connect/suitecrm/suitecrm-asterlink-module/extensions/asterlink/app/src/components/asterlink/asterlink.component.html
+++ b/connect/suitecrm/suitecrm-asterlink-module/extensions/asterlink/app/src/components/asterlink/asterlink.component.html
@@ -1,5 +1,5 @@
 <asterlink-call-card 
-  *ngFor="let call of asterlinkService.calls" 
+  *ngFor="let call of asterlinkService.calls()" 
   [isAnswered]="call.answered" 
   [cid]="call.cid"
   [did]="call.did"
